[package]
name = "mc-pi-csharp-bind"
version = "0.1.0"
authors = ["noname <48761044+noname0310@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "mc_pi_csharp_bind"
crate-type = ["cdylib"]

[dependencies]
libloading = "0.7"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]